--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   "dependencies": {
     "@hookform/resolvers": "1.3.0",
     "@stripe/stripe-js": "^1.13.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "classcat": "^5.0.3",
+    "classnames": "^2.3.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "next": "^10.0.0",
     "next-seo": "^4.20.0",
+    "next-themes": "^0.0.15",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^6.15.4",
     "react-use-cart": "^1.11.1",
     "stripe": "^8.137.0",
     "swr": "^0.4.2",
+    "tabbable": "^5.2.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -28,7 +32,7 @@
     "autoprefixer": "^10.0.0",
     "postcss": "^8.0.0",
     "prettier": "^2.0.0",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^2.2.2",
     "typescript": "^4.4.4"
   }
 }
